# fst_test

./: .gitignore  100m.iotop  20m+100m.iostat2  20m+100m.iostat3  20m+100m.iostat4  20m+100m.iostat5  20m+100m.iostat7  20m+100m.iostat8  Cargo.toml  README.md
src/: generate.rs  query.rs
