[package]
name = "fst_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "query"
path = "src/query.rs"

[[bin]]
name = "generate"
path = "src/generate.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

fst = "0.4.7"
rand = "0.8.5"
sha2 = "0.10.7"
memmap2 = "*"
rayon = "1.7.0"
clap = "4.3.19"
clap_derive = "4.3.12"
pariter = "*"
hex = "0.4.3"